ubuntu/22.04/p/py/python2.7-dbg/2.7.18-13ubuntu1.1/9459ea83-c2ab-48c5-93cd-00142099299e/_usr_bin_python2.7-dbg.strace.stderr
  File "<stdin>", line 1
    /usr/bin/python2.7-dbg
    ^
SyntaxError: invalid syntax
